# pychat

./: .gitignore  README.md  pyproject.toml
mobile/: app.kv  app.py
templates/: chat.html
web/: main.py
web/route/: api.py  routers.py
web/w_sockets/: api.py  websocketManager.py  ws_chat.py
